# fastapi-template

./: .flake8  .gitignore  Dockerfile  cookiecutter.json  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: lint.yml
alembic/: env.py
app/: main.py
app/api/: api.py  deps.py
app/api/api_v1/: api.py
app/core/: config.py
app/core/db/: __init__.py  base.py  base_class.py  session.py
app/crud/: crud_base.py
app/db/: base_class.py  session.py
scripts/: entrypoint.sh  start-prod.sh
{{ cookiecutter.project_slug }}/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  example.env  mypy.ini  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: CI.yml  lint.yml
{{ cookiecutter.project_slug }}/.vim/: coc-settings.json
{{ cookiecutter.project_slug }}/alembic/: env.py
{{ cookiecutter.project_slug }}/app/: main.py
{{ cookiecutter.project_slug }}/app/api/api_v1/endpoints/: hello.py
{{ cookiecutter.project_slug }}/app/core/: config.py  gunicorn_conf.py
{{ cookiecutter.project_slug }}/app/crud/: __init__.py  crud_base.py
{{ cookiecutter.project_slug }}/app/db/: base_class.py  session.py
{{ cookiecutter.project_slug }}/app/models/: __init__.py
{{ cookiecutter.project_slug }}/app/schemas/: __init__.py  base.py
{{ cookiecutter.project_slug }}/app/tests/: conftest.py  test_main.py
{{ cookiecutter.project_slug }}/scripts/: start-prod.sh
