[tool.poetry]
name = "async-fastapi-template"
version = "0.1.0"
description = "Template for fastapi projects"
authors = ["Alisson Lopez <alisson.hdz.lopez@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.37"
alembic = "^1.7.7"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.37"}
pytest = "^7.1.2"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
