[tool.poetry]
name = "async-fastapi-template"
version = "0.1.0"
description = "FastAPI template using asyncio SQLAlchemy"
authors = ["Alisson Lopez <alisson.hdz.lopez@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
