[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "Template for fastapi projects"
authors = ["Alisson Lopez <alisson.hdz.lopez@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.39"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.39"}
pytest = "^7.1.2"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
