[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.40"
alembic = "^1.7.7"
asyncpg = "^0.25.0"
httpx = "^0.23.0"
orjson = "^3.7.11"
tabulate = "^0.8.10"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.40"}
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
types-tabulate = "^0.8.11"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
