[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.87.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.44"
asyncpg = "^0.27.0"
httpx = "^0.23.1"
orjson = "^3.8.2"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"
flake8 = "^6.0.0"
autoflake = "^1.7"
isort = "^5.10.1"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.44"}
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
types-tabulate = "^0.9.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
