[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>",]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.95.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
SQLAlchemy = "^2.0.19"
asyncpg = "^0.27.0"
httpx = "^0.23.3"
orjson = "^3.8.10"
tabulate = "^0.9.0"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
autoflake = "^2.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
types-tabulate = "^0.9.0"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
